--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,61 +1,60 @@
 on:
-
   pull_request:
     types:
       - opened
       - reopened
-      - synchronized
+      - synchronize
       - ready_for_review
-    branches_ignore:
-      - test/**
-
+    # branches-ignore:
+    #   - cosmetics/**
   push:
+    # branches:
+    #   - main
+name: Run continuous integration
+concurrency: 
+  group: 'ci-${{ github.ref }}'
+defaults:
+  run:
+    shell: bash
+jobs:
 
-    # branches: 
-    #   - mian
+  affected-services:
+    runs-on: ubuntu-22.04
+    name: Fetch changed files
+    timeout-minutes: 1
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: debug info
+        run: |
+          echo '${{ github.event.head_commit.message }}'
+          echo '${{ github.base_ref }}'
+          echo '${{ github.ref }}'
 
-  
-  name: CI 
-  concurrency:
-    group: 'ci-${{ github.ref }}'
-  defaults:
-    run: 
-      shell: bash
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v32
 
-  jobs:
-    affected-services:
-      runs-on: ubuntu-22.04
-      name: Fetching changed files
-      timout-minutes: 1
-      steps:
-        - uses: actions/checkout@v3
-          with:
-            fetch-depth: 0
-        - name: Debuging | Info 
-          run: | 
-            echo '${{ github.event.head_commit.message }}'
-            echo '${{ github.base_ref }}'
-            echo '${{ github.ref }}'
-        
-        - name: File | Get changed files 
-          id: changed-files
-          uses: tj-actions/changed-files@v32
+      - name: List all changed files
+        id: list-files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+#         if [[ "$file" == .github/workflows/*.yaml ]] ; then
+#           echo "Will run CI" && echo "::set-output name=changed_client::true"; fi
+#         if [[ "$file" == bash_scripts/*.sh ]] || [[ "$file" == TradingSystemTests/** ]] ; then
+#           echo "Will run CI" && echo "::set-output name=changed_client::true"; fi
+#         if [[ "$file" == **.tf ]] || [[ "$file" == **.sh ]] || [[ "$file" == **.py ]]; then
+#           echo "Will run code checker" && echo "::set-output name=code_check::true"; fi
+          done
+    outputs:
+      changed_client: ${{ steps.list-files.outputs.changed_client }}
+      code_check: ${{ steps.list-files.outputs.code_check }}
 
-        - name: File | List all canged files
-          id: list-files
-          run: | 
-            for file in ${{ steps.chnaged-files.outputs.all_chnaged_files }}; do
-              echo "$file was changed"
-            
-            done
-        outputs:
-          changed_client: ${{ steps.list-files.outputs.changed_client }}
-          code_check: ${{ steps.list-files.outputs.code_check }}
-
-
-      # call-something: 
-      #   name: Run 
-      #   needs: [affected-services]
-      #   if: needs.affected-services.outputs.changed_client == 'true'
-      #   uses: ./.github/workflowes/
-      #   secrets: inherit
+# call-something:
+#   name: Run
+#   needs: [affected-services]
+#   if: needs.affected-services.outputs.changed_client == 'true'
+#   uses: ./.github/workflows/
+#   secrets: inherit
