feat: add action and infracost for terraform per env inside terraform modules

--- a/.github/workflows/ci-cd-build-push-gcr.yml
+++ b/.github/workflows/ci-cd-build-push-gcr.yml
@@ -9,7 +9,7 @@ on:
     #   - cosmetics/**
   push:
      branches:
-       - main
+       - dev
     
     # branches-ignore:
     #   - cosmetics/**
