--- a/.github/workflows/ci-cd-build-push-gcr.yml
+++ b/.github/workflows/ci-cd-build-push-gcr.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Step 1 | Bring the new code
         uses: actions/checkout@v3
 
-      - name: Step 2 | Set up Docker Buildx  # need to enable and save the cache
-        # uses: docker/setup-buildx-action@v2.2.0
+      # - name: Step 2 | Set up Docker Buildx  # need to enable and save the cache
+      #   uses: docker/setup-buildx-action@v2.2.0
 
       - name: Step 3 | Authenticate to Google Cloud
         id: 'auth'
