--- a/.github/workflows/trigger.env.yml
+++ b/.github/workflows/trigger.env.yml
@@ -12,28 +12,28 @@ jobs:
 
   call-infracost-gke-dev:
     name:  Infracost | Develop clustr on GKE (Unsecure)
-    uses: .github/workflows/infracost.yaml
+    uses: ./.github/workflows/infracost.yaml
     with:
       terraform_env: terraform/gcp/environments/gke/dev
     secrets: inherit
   
   call-infracost-infra-secure:
     name:  Infracost | Infrastructure on Terraform GKE (secure)
-    uses: .github/workflows/infracost.yaml
+    uses: ./.github/workflows/infracost.yaml
     with:
       terraform_env: terraform/gcp/environments/infra-secure
     secrets: inherit
   
   call-infracost-platform-secure:
     name:  Infracost | Infrastructure on Terraform GKE (secure)
-    uses: .github/workflows/infracost.yaml
+    uses: ./.github/workflows/infracost.yaml
     with:
       terraform_env: terraform/gcp/environments/platfrom
     secrets: inherit
 
   call-infracost-vertex-dev:
     name:  Infracost | Infrastructure on Terraform VERTEX-DEV
-    uses: .github/workflows/infracost.yaml
+    uses: ./.github/workflows/infracost.yaml
     with:
       terraform_env: terraform/gcp/environments/vertex-ai/dev
     secrets: inherit
