--- a/.github/workflows/trigger.env.yml
+++ b/.github/workflows/trigger.env.yml
@@ -1,5 +1,7 @@
 # on: [pull_request]
-on: [pull-request]
+on:
+  pull_request: 
+    branches: ["main", "feature/**", "fix/**"]
 
 defaults:
   run:
