--- a/.github/workflows/trigger.env.yml
+++ b/.github/workflows/trigger.env.yml
@@ -11,34 +11,34 @@ env:
   TARGET_BRANCH: ${{ github.base_ref }}
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    call-infracost-gke-dev:
-      name:  Infracost | Develop clustr on GKE (Unsecure)
-      uses: actions/checkout@3
-      uses: ./.github/workflows/infracost.yaml
-      with:
-        terraform_env: terraform/gcp/environments/gke/dev
-      secrets: inherit
-    
-    call-infracost-infra-secure:
-      name:  Infracost | Infrastructure on Terraform GKE (secure)
-      uses: ./.github/workflows/infracost.yaml
-      with:
-        terraform_env: terraform/gcp/environments/infra-secure
-      secrets: inherit
-    
-    call-infracost-platform-secure:
-      name:  Infracost | Infrastructure on Terraform GKE (secure)
-      uses: ./.github/workflows/infracost.yaml
-      with:
-        terraform_env: terraform/gcp/environments/platfrom
-      secrets: inherit
+  call-infracost-gke-dev:
+    runs-on: ubuntu-latest
+    steps:
+      - name:  Infracost | Develop clustr on GKE (Unsecure)
+        uses: actions/checkout@3
+        uses: ./.github/workflows/infracost.yaml
+        with:
+          terraform_env: terraform/gcp/environments/gke/dev
+        secrets: inherit
+  
+  
+      - name:  Infracost | Infrastructure on Terraform GKE (secure)
+        uses: ./.github/workflows/infracost.yaml
+        with:
+          terraform_env: terraform/gcp/environments/infra-secure
+        secrets: inherit
+  
 
-    call-infracost-vertex-dev:
-      name:  Infracost | Infrastructure on Terraform VERTEX-DEV
-      uses: ./.github/workflows/infracost.yaml
-      with:
-        terraform_env: terraform/gcp/environments/vertex-ai/dev
-      secrets: inherit
+      - name:  Infracost | Infrastructure on Terraform GKE (secure)
+        uses: ./.github/workflows/infracost.yaml
+        with:
+          terraform_env: terraform/gcp/environments/platfrom
+        secrets: inherit
+
+      - name:  Infracost | Infrastructure on Terraform VERTEX-DEV
+        uses: ./.github/workflows/infracost.yaml
+        with:
+          terraform_env: terraform/gcp/environments/vertex-ai/dev
+        secrets: inherit
+
 
