feat: add the infracost diff

--- a/.github/workflows/trigger.env.yml
+++ b/.github/workflows/trigger.env.yml
@@ -14,8 +14,10 @@ jobs:
   call-infracost-gke-dev:
     runs-on: ubuntu-latest
     steps:
-      - name:  Infracost | Develop clustr on GKE (Unsecure)
+      - name: chouckout
         uses: actions/checkout@3
+      
+      - name:  Infracost | Develop clustr on GKE (Unsecure)
         uses: ./.github/workflows/infracost.yaml
         with:
           terraform_env: terraform/gcp/environments/gke/dev
