--- a/.github/workflows/trigger.env.yml
+++ b/.github/workflows/trigger.env.yml
@@ -2,42 +2,45 @@
 on:
   pull_request: 
     branches: ["main", "feature/**", "fix/**"]
-# defaults:
-  # run:
-    # shell: bash
+
+defaults:
+  run:
+    shell: bash
+
 env:
   TARGET_BRANCH: ${{ github.base_ref }}
+
 jobs:
   call-infracost-gke-dev:
     runs-on: ubuntu-latest
     steps:
       - name: chouckout
         uses: actions/checkout@3
-
+      
       - name:  Infracost | Develop clustr on GKE (Unsecure)
         uses: ./.github/workflows/infracost.yaml
-        secrets: inherit
         with:
           terraform_env: terraform/gcp/environments/gke/dev
-  
-  
-      - name:  Infracost | Infrastructure on Terraform GKE (secure)
-        uses: ./.github/workflows/infracost.yaml
         secrets: inherit
-        with:
-          terraform_env: terraform/gcp/environments/infra-secure
+  
+  
+      # - name:  Infracost | Infrastructure on Terraform GKE (secure)
+      #   uses: ./.github/workflows/infracost.yaml
+      #   with:
+      #     terraform_env: terraform/gcp/environments/infra-secure
+      #   secrets: inherit
   
 
-      - name:  Infracost | Infrastructure on Terraform GKE (secure)
-        uses: ./.github/workflows/infracost.yaml
-        secrets: inherit
-        with:
-          terraform_env: terraform/gcp/environments/platfrom
+      # - name:  Infracost | Infrastructure on Terraform GKE (secure)
+      #   uses: ./.github/workflows/infracost.yaml
+      #   with:
+      #     terraform_env: terraform/gcp/environments/platfrom
+      #   secrets: inherit
 
-      - name:  Infracost | Infrastructure on Terraform VERTEX-DEV
-        uses: ./.github/workflows/infracost.yaml
-        secrets: inherit
-        with:
-          terraform_env: terraform/gcp/environments/vertex-ai/dev
+      # - name:  Infracost | Infrastructure on Terraform VERTEX-DEV
+      #   uses: ./.github/workflows/infracost.yaml
+      #   with:
+      #     terraform_env: terraform/gcp/environments/vertex-ai/dev
+      #   secrets: inherit
 
 
