--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -60,19 +60,23 @@ jobs:
           echo "affected_services_output=$parsed" >> $GITHUB_OUTPUT
     outputs:
       affected_services_output: ${{ steps.set-services.outputs.affected_services_output }}
-    
-  call-checkov:
-    needs: [affected-services]
-    runs-on: ubuntu-latest
-    if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
-      - name:  Infracost | Develop clustr on GKE (Unsecure)
+      
+      - name: Infracost | Develop clustr on GKE (Unsecure)
+        if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
         uses: ./.github/workflows/more-actions/checkov-terraform-SCA.yaml
-        with:
-          services: ${{needs.affected-services.outputs.affected_services_output}}
-        # secrets: inherit
+        secrets: inherit
+
+    # call-checkov:
+    #   needs: [affected-services]
+    #   if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
+    #   steps:
+    #     - name: Checkout the code
+    #       uses: actions/checkout@v3
+    #     - name:  Infracost | Develop clustr on GKE (Unsecure)
+    #       uses: ./.github/workflows/more-actions/checkov-terraform-SCA.yaml
+    #       # with:
+    #         # services: ${{needs.affected-services.outputs.affected_services_output}}
+    #       # secrets: inherit
 
   # setup-build-push:
   #   needs: [affected-services]
