--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -78,7 +78,7 @@ jobs:
         continue-on-error: true
         with:
           services: ${{needs.affected-services.outputs.affected_services_output}}
-        secrets: inherit
+        # secrets: inherit
 
   # setup-build-push:
   #   needs: [affected-services]
