--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -62,8 +62,8 @@ jobs:
       affected_services_output: ${{ steps.set-services.outputs.affected_services_output }}
     
   call-checkov:
+    name: Run Checkov terraform SCA
     needs: [affected-services]
-    runs-on: ubuntu-latest
     if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
     uses: ./.github/workflows/checkov-terraform-SCA.yaml
     with:
