--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,6 +1,12 @@
 # The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
 # describe other options for 'on', 'pull_request' is a good default.
-on: [pull_request]
+on:
+  workflow_call:
+    inputs:
+      terraform_env:
+        required: true
+        type: string
+
 jobs:
   infracost:
     name: Infracost
@@ -10,7 +16,7 @@ jobs:
       pull-requests: write
 
     env:
-      TF_ROOT: terraform/gcp/environments/gke/dev
+      TF_ROOT: terraform/environments/${{ inputs.terraform_env }}
 
     steps:
 
@@ -31,6 +37,7 @@ jobs:
           infracost breakdown --path=${TF_ROOT} \
                               --format=json \
                               --out-file=/tmp/infracost-base.json
+
       # Checkout the current PR branch so we can create a diff.
       - name: Checkout PR branch
         uses: actions/checkout@v3
@@ -42,6 +49,7 @@ jobs:
                           --format=json \
                           --compare-to=/tmp/infracost-base.json \
                           --out-file=/tmp/infracost.json
+
       # Posts a comment to the PR using the 'update' behavior.
       # This creates a single comment and updates it. The "quietest" option.
       # The other valid behaviors are:
@@ -55,4 +63,4 @@ jobs:
                                      --repo=$GITHUB_REPOSITORY \
                                      --github-token=${{github.token}} \
                                      --pull-request=${{github.event.pull_request.number}} \
-                                     --behavior=update
+                                     --behavior=new
