--- a/.github/workflows/checkov-terraform-SCA.yaml
+++ b/.github/workflows/checkov-terraform-SCA.yaml
@@ -1,10 +1,19 @@
 #  Static code analysis tool for terraform
 name: JOB | Checkov terraform code static code analysis. 
+# on:
+  # push:
+  #   branches: ["main", "feature/**", "fix/**"]
+# Call form another workflow with the service params that has been changed. 
 on:
-  push:
-    branches: ["main", "feature/**", "fix/**"]
+  workflow_call: 
+    inputs:
+      services:
+        required: true
+        type: string
+defaults:
+  run:
+    shell: bash
 
-  workflow_dispatch:
     
 jobs:
   checkov:
@@ -32,5 +41,3 @@ jobs:
           # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issues
           # use_enforcement_rules: true # optional - use enforcement rule configs from the platform
           # github_pat: ${{ secrets.GH_PAT }}  # To give checkov the possibility to download private GitHub modules you need to pass a valid GitHub PAT with the needed permissions.
-
-
