--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -30,7 +30,7 @@ jobs:
     name: Fetch changed files
     timeout-minutes: 1
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           
@@ -51,13 +51,23 @@ jobs:
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "$file was changed"
           if [[ "$file" == ** ]] ; then
-            affected_services+=("Some Files has been changed.") ; fi
+            affected_services+=("Some Files has been changed !!!! ") ; fi
+          if [[ "$file" == terraform/** ]]; then
+            affected_services+=("terraform") ; fi
           done
           without_dups=$(echo ${affected_services[@]} | xargs -n1 | sort -u | xargs)
           parsed=$(IFS='|';echo "${without_dups[*]// /|}";IFS=$' \t\n') && echo $parsed
           echo "affected_services_output=$parsed" >> $GITHUB_OUTPUT
     outputs:
       affected_services_output: ${{ steps.set-services.outputs.affected_services_output }}
+    
+  call-checkov:
+    name: IF CHANGED | Run Checkov terraform SCA
+    needs: [affected-services]
+    if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
+    uses: ./.github/workflows/checkov-terraform-SCA.yaml
+    with:
+      services: ${{needs.affected-services.outputs.affected_services_output}}
 
   # setup-build-push:
   #   needs: [affected-services]
