--- a/.github/workflows/trigger-env.yml
+++ b/.github/workflows/trigger-env.yml
@@ -1,7 +1,7 @@
 # on: [pull_request]
 on:
   pull_request: 
-    branches: ["main", "feature/**", "fix/**"]
+    branches: ["feature/**", "fix/**"]
 defaults:
   run:
     shell: bash
