--- a/docker-compose/gophish-prod-app/etc/nginx/config.conf
+++ b/docker-compose/gophish-prod-app/etc/nginx/config.conf
@@ -1,11 +1,21 @@
 server{
     listen 443 ssl;
-    server_name example.com;
+    server_name sub.domain.com;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
 
-    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    ssl_certificate /etc/letsencrypt/live/sub.domain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sub.domain.com/privkey.pem;
+    error_log /var/log/nginx/error.log warn;
 
     location / {
-        proxy_pass http://gophish:3333;
+        proxy_pass http://gophish:3333/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
     }
 }
