--- a/.github/workflows/ci-build-push-gcr.yml
+++ b/.github/workflows/ci-build-push-gcr.yml
@@ -10,11 +10,12 @@ on:
     #   - cosmetics/**
   push:
      branches:
-       - dev
+       - docker
     
-    # branches-ignore:
-    #   - cosmetics/**
-    #   - cosmetic/**
+    branches-ignore:
+      - main
+      - dev
+      - feature/**
 
 concurrency: 
   group: 'ci-${{ github.ref }}'
@@ -28,7 +29,7 @@ jobs:
     name: Fetch changed files
     timeout-minutes: 1
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           
@@ -40,7 +41,7 @@ jobs:
       
       - name: Step 1 | Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@v39
+        uses: tj-actions/changed-files@v38
 
       - name: Step 2 | List all changed files & Set affected services
         id: set-services
@@ -64,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1 | Bring the new code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       # - name: Step 2 | Set up Docker Buildx  # need to enable and save the cache
       #   uses: docker/setup-buildx-action@v2.2.0
