--- a/.github/workflows/ci-build-push.yaml
+++ b/.github/workflows/ci-build-push.yaml
@@ -65,14 +65,14 @@ jobs:
     name: IF CHANGED | Run Checkov terraform SCA
     needs: [affected-services]
     if: contains(needs.affected-services.outputs.affected_services_output, 'terraform')
-    uses: ./.github/workflows/depend-bot/checkov-terraform.yaml
+    uses: osher.levi7/dev/.github/workflows/depend-bot/checkov-terraform.yaml@main
     with:
       services: ${{needs.affected-services.outputs.affected_services_output}}
 
   call-infracost:
         name: JOB | Run infracost terraform 
         # needs: [affected-services]
-        uses: ./.github/workflows/infacost.yaml
+        uses: osher.levi7/dev/.github/workflows//infacost.yaml
         with:
           terraform_env: terraform/gcp/environments/infra-secure
     
