--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -16,70 +16,108 @@
 # For more examples, including how to limit scans to only high-severity issues
 # and fail PR checks, see https://github.com/snyk/actions/
 
-name: Snyk Security
+# name: Snyk Security
+
+# on:
+#   push:
+#     branches: ["main" ]
+#   pull_request:
+#     branches: ["main"]
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   snyk:
+#     permissions:
+#       contents: read # for actions/checkout to fetch code
+#       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+#       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - name: Set up Snyk CLI to check for security issues
+#         # Snyk can be used to break the build when it detects security issues.
+#         # In this case we want to upload the SAST issues to GitHub Code Scanning
+#         uses: snyk/actions/setup@299cde98a08ff8b1c2bfde1e5a067bce67a6d2b8
+
+#         # For Snyk Open Source you must first set up the development environment for your application's dependencies
+#         # For example for Node
+#         #- uses: actions/setup-node@v3
+#         #  with:
+#         #    node-version: 16
+
+#         env:
+#           # This is where you will need to introduce the Snyk API token created with your Snyk account
+#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+#       - name: Snyk Auth using API
+#         run: snyk auth ${{ secrets.SNYK_TOKEN }} -d
+#         # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
+#         # Use || true to not fail the pipeline
+#       - name: Snyk Code test
+#         run: snyk code test --sarif > snyk-code.sarif || true
+
+#         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
+#       - name: Run Snyk to check for vulnerabilities
+#         uses: snyk/actions/node@master
+#         env:
+#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} # Use the secret you stored in your repository
+#         with:
+#           args: --all-projects
+
+#         # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
+#         # Use || true to not fail the pipeline.
+#       - name: Snyk IaC test and report
+#         run: snyk iac test --report # || true
+
+#         # Build the docker image for testing
+#       - name: Build a Docker image
+#         run: docker build -t your/image-to-test .
+#         # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
+#       - name: Snyk Container monitor
+#         run: snyk container monitor your/image-to-test --file=Dockerfile
+
+#         # Push the Snyk Code results into GitHub Code Scanning tab
+#       - name: Upload result to GitHub Code Scanning
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: snyk-code.sarif
+
+
+
+name: Snyk Security Check
 
 on:
   push:
-    branches: ["main" ]
-  pull_request:
-    branches: ["main"]
-
-permissions:
-  contents: read
+    branches:
+      - main
+      - dev
+      # Add more branch names if needed
 
 jobs:
-  snyk:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+  snyk-check:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Snyk CLI to check for security issues
-        # Snyk can be used to break the build when it detects security issues.
-        # In this case we want to upload the SAST issues to GitHub Code Scanning
-        uses: snyk/actions/setup@299cde98a08ff8b1c2bfde1e5a067bce67a6d2b8
+    - name: Checkout
+      uses: actions/checkout@v2
 
-        # For Snyk Open Source you must first set up the development environment for your application's dependencies
-        # For example for Node
-        #- uses: actions/setup-node@v3
-        #  with:
-        #    node-version: 16
+    - name: Set up Snyk CLI to check for security issues
+      uses: snyk/actions/setup@299cde98a08ff8b1c2bfde1e5a067bce67a6d2b8
 
-        env:
-          # This is where you will need to introduce the Snyk API token created with your Snyk account
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      - name: Snyk Auth using API
-        run: snyk auth ${{ secrets.SNYK_TOKEN }} -d
-        # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
-        # Use || true to not fail the pipeline
-      - name: Snyk Code test
-        run: snyk code test --sarif > snyk-code.sarif || true
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
 
-        # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} # Use the secret you stored in your repository
-        with:
-          args: --all-projects
+    # If Snyk CLI is not installed on the runner, you can install it as follows:
+    - name: Install Snyk CLI
+      run: npm install -g snyk
 
-        # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
-        # Use || true to not fail the pipeline.
-      - name: Snyk IaC test and report
-        run: snyk iac test --report # || true
+    - name: Snyk Auth using API
+      run: snyk auth ${{ secrets.SNYK_TOKEN }} -d
 
-        # Build the docker image for testing
-      - name: Build a Docker image
-        run: docker build -t your/image-to-test .
-        # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
-      - name: Snyk Container monitor
-        run: snyk container monitor your/image-to-test --file=Dockerfile
-
-        # Push the Snyk Code results into GitHub Code Scanning tab
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk-code.sarif
+    - name: Snyk Test
+      run: snyk test
