--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -109,7 +109,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7'  # Change this to your version
+        python-version: '3.9'  # Change this to your version
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -124,9 +124,10 @@ jobs:
       run: snyk auth ${{ secrets.SNYK_TOKEN }} -d
 
     - name: file-converter | pip install
-      run: pip install -r services/file-converter/requirements.txt
-    - name: file-converter | pipinstall
-      run: pip install -r services/streamlit-dashboard/streamlit/requirements.txt
+      run: python3 -m pip install -r services/file-converter/requirements.txt
+
+    - name: streamlit-dashboard | pip install 
+      run: python3 -m pip install -r services/streamlit-dashboard/streamlit/requirements.txt
 
     - name: file-converter |  Snyk Test 
       run: snyk test services/file-converter
