--- a/.github/workflows/ci-build-push-dockerhub.yaml
+++ b/.github/workflows/ci-build-push-dockerhub.yaml
@@ -40,18 +40,18 @@ jobs:
           echo '${{ github.base_ref }}'
           echo '${{ github.ref }}'
       
-      - name: Step 1 | Get changed files
+      - name: CHECKOUT | Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v40.1.0
 
-      - name: Step 2 | List all changed files & Set affected services
+      - name: EFECTED-SERVICES | List all changed files & Set affected services
         id: set-services
         run: |
           affected_services=()
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo "$file was changed"
-          if [[ "$file" == ** ]] ; then
-            affected_services+=("Some Files has been changed !!!! ") ; fi
+          # if [[ "$file" == ** ]] ; then
+          #   affected_services+=("Some Files has been changed !!!! ") ; fi
           if [[ "$file" == terraform/** ]]; then
             affected_services+=("terraform") ; fi
           if [[ "$file" == services/** ]]; then
@@ -83,6 +83,8 @@ jobs:
     needs: [affected-services]
     if: contains(needs.affected-services.outputs.affected_services_output, 'services')
     runs-on: ubuntu-latest
+    with:
+      services: ${{needs.affected-services.outputs.affected_services_output}}
     steps:
       - name: CHECKOUT | Bring the new code
         uses: actions/checkout@v4.1.1
