--- a/.github/workflows/ci-build-push-dockerhub.yaml
+++ b/.github/workflows/ci-build-push-dockerhub.yaml
@@ -12,7 +12,7 @@ on:
      branches:
        - main
        - dev
-       - feature/**
+       - feat/**
     
     # branches-ignore:
     #   - cosmetics/**
